# QCSuper

./: .gitignore  README.md  cell_map.txt  del_cache_py.sh  design_notes.txt  offlineAnalysis.py  processor.py  pyproject.toml  pyshark_processor.py  qcsuper.py  setup.py  testNewId.pcapng  testPyshark.py
cellMaps/: cell_map.txt  cell_mapTAhho.txt  cell_map_testRun.txt  testNewId.pcapng
docs/: (internal) QCSuper class model.md  QCSuper architecture.md  The Diag protocol.md
docs/sample_pcaps/: sample_2g_3g_4g_xperia.pcap  sample_2g_3g_4g_xperia_with_sib_and_nas.pcap
inputs/: README.md  _base_input.py  _hdlc_mixin.py  adb.py  adb_wsl2.py  dlf_read.py  json_geo_read.py  tcp.py  usb_modem.py
inputs/adb_bridge/: Makefile  README.md  adb_bridge  adb_bridge.c
inputs/adb_wsl2_bridge/: README.md
modules/: README.md  _enable_log_mixin.py  _utils.py  cli.py  decoded_sibs_dump.py  dlf_dump.py  efs_shell.py  info.py  json_geo_dump.py  memory_dump.py  pcap_dump.py
modules/efs_shell_commands/: _base_efs_shell_command.py  cat.py  chmod.py  device_info.py  get.py  ln.py  ls.py  md5sum.py  mkdir.py  mv.py  put.py  rm.py  stat.py
pcaps/: nasDecrypted.pcapng  taHandover.pcapng  taHandoverGood.pcapng  test.pcap  testRun.pcapng  testRunBadNode.pcapng  testRunCompare.pcapng  tramRide10Swisscom.pcapng  tramRide10Swisscom_cell_map.txt
protocol/: gsmtap.py  log_types.py  messages.py
src/: __main__.py  main.py
src/atutil/: atsock.py  celltracker.py
src/inputs/: README.md  _base_input.py  _hdlc_mixin.py  adb.py  adb_wsl2.py  (+7 more)
tests/: tests.py  tests_usbmodem_argparser.py
(+42 files in other folders)
